feat: implement conversational memory foundation